Added lua scripting with some basic functions and binds to logs
this is still very very basic just a concept that I will improve over time I just wanted to get this setup now rather than later as I honestly have a hard time integrating scripting into any project lol

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -210,3 +210,14 @@ add_custom_command(
         ${CMAKE_SOURCE_DIR}/shaders
         $<TARGET_FILE_DIR:Purp3D>/shaders
 )
+
+# -------------------------------------
+# Copy assets next to the executable
+# -------------------------------------
+add_custom_command(
+    TARGET Purp3D
+    POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+        ${CMAKE_SOURCE_DIR}/game/assets
+        $<TARGET_FILE_DIR:Purp3D>/assets
+)
