--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,7 @@
+# -------------------------------------------
+# Copyright (c) 2025-2026 ZED Interactive
+# -------------------------------------------
+
 cmake_minimum_required(VERSION 3.10)
 
 project(Purp3D LANGUAGES C CXX)
